# Simulador-de-Algoritmos

./: README.md
Simulador_Algoritmos/: CMakeLists.txt
SumuladorAlgoritmos/: CMakeLists.txt  SumuladorAlgoritmos_es_GT.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  planificador.cpp  planificador.h  proceso.h  ventanafifo.cpp  ventanafifo.h  ventanafifo.ui
build-SumuladorAlgoritmos-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  SumuladorAlgoritmos  build.ninja  cmake_install.cmake
build-SumuladorAlgoritmos-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-02d8ff0bbbe03b815c9d.json  cmakeFiles-v1-fc00fa5344105c049f50.json  codemodel-v2-a1ab02851df8287279d0.json  index-2025-10-26T08-53-00-0206.json  target-SumuladorAlgoritmos-Debug-6e722557409034b5b522.json  target-SumuladorAlgoritmos_autogen-Debug-a227b85e697b18082273.json  target-SumuladorAlgoritmos_autogen_timestamp_deps-Debug-66b1446c73d86c0410be.json
build-SumuladorAlgoritmos-Desktop-Debug/SumuladorAlgoritmos_autogen/: deps
build-SumuladorAlgoritmos-Desktop-Debug/SumuladorAlgoritmos_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
